# polyase

./: .gitignore  .readthedocs.yaml  README.md  changelog  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/source/: conf.py  examples.rst  index.rst  intro.rst  longrnaseq.rst  longrnaseq_tutorial.rst  modules.rst  multiqc.rst  polyase.rst  polyase_api.rst  potato_polyase.ipynb  syntelogfinder.rst  syntelogfinder_tutorial.rst  tutorial.rst  tutorial_potato.rst  tutorial_rice.rst
docs/source/_static/: my_theme.css  potato_polyase.html
polyase/: __init__.py  ase_data_loader.py  filter.py  multimapping.py  plotting.py  stats.py  structure.py
requirements/: base.txt  docs.txt
tests/: test_structure.py
