[build-system]
requires = ["setuptools >= 67"]
build-backend = "setuptools.build_meta"

[project]
name = "polyase"
version = "0.1.6"
description = "A package for analyzing allele-specific expression in polyploid organisms"
authors = [
    {name = "nadjano", email = "nadja.franziska.nolte@nib.si"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
        "numpy",
        "scipy",
        "pandas",
        "anndata",
        "matplotlib",
        "seaborn",
        "RNApysoforms",
        "isotools"
]

[project.urls]
"Homepage" = "https://github.com/nadjano/polyase"
